# vcfloat

./: .gitignore  ACKS  LICENSE  Makefile  OLD_LICENSE  README  TODO.md  clean_external_libs.sh  configure  coq-vcfloat.opam  get_external_libs.sh
FPBench/: .depend  .doppler1.aux  .doppler2.aux  .doppler3.aux  .lia.cache  .nra.cache  .predatorprey.aux  .univariate.aux  .verhulst.aux  Makefile  README.md  _CoqProject  carbongas.v  doppler.v  doppler1.glob  doppler1.v  doppler1.vo  doppler2.glob  doppler2.v  doppler2.vo  doppler3.glob  doppler3.v  doppler3.vo  himmilbeau.v  jetengine.v  kepler.v  kepler0.v  kepler1.v  kepler2.v  multivar_2.v  multivar_6.v  plotting.py  predatorprey.glob  predatorprey.v  predatorprey.vo  rigid_body.v  rigid_body1.v  rigid_body2.v  t_div_t1.v  turbine.v  (+8 more)
Test/: .gitignore  .lia.cache  .nra.cache  Makefile  Nonstd.v  README.md  Test.v  Test2.v  TestFunc.v  TestPaper.v  TestRefman.v  autobisect.v  summation.v  summation.v.crashcoqide
doc/: VCFloat-Manual.tex  lstlangcoq.sty
patches/: compcert.patch  interval.patch
vcfloat/: .Automate.aux  .BigQAux.aux  .BigRAux.aux  .FMap_lemmas.aux  .FPCompCert.aux  .FPCore.aux  .FPLang.aux  .FPLangOpt.aux  .Float_lemmas.aux  .Float_notations.aux  .Fprop_absolute.aux  .IEEE754_extra.aux  .LibTac.aux  .Prune.aux  .Q2RAux.aux  .RAux.aux  .Reify.aux  .Rounding.aux  .Test.aux  .Test2.aux  .TestPaper.aux  .VCFloat.aux  .depend  .lia.cache  .nra.cache  Automate.glob  Automate.v  Automate.vo  Base.v  BigQAux.glob  BigQAux.v  BigQAux.vo  BigRAux.glob  BigRAux.v  BigRAux.vo  Clight2FP.v  Clight2FPOpt.v  Example.v  (+63 more)
(+8 files in other folders)
